add header, footer and images

--- a/index.html
+++ b/index.html
@@ -4,21 +4,71 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
-	 crossorigin="anonymous">
+	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+		integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 	<link href="https://fonts.googleapis.com/css2?family=Cairo:wght@300&family=Megrim&display=swap" rel="stylesheet">
 	<link href="assets/css/style.css" rel="stylesheet" type="text/css" />
 	<title>WonderList</title>
 </head>
 
 <body>
-
-<script src="assets/js/script.js" crossorigin="anonymous"></script>
+	<header>
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+			<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+					<li class="nav-item active">
+						<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+					</li>
+					<li class="nav-item">
+						<a class="nav-link" href="list.html">List of sites</a>
+					</li>
+				</ul>
+			</div>
+			<a class="navbar-brand"
+				href="index.html">WonderList<img src="https://img.icons8.com/dusk/64/000000/world-map.png"/ alt="WonderList"></a>
+		</nav>
+	</header>
+	<footer class="container-fluid">
+		<div class="row no-gutters align-items-center">
+			<div class="col-sm">
+				<a id="icons-ref" href="https://icons8.com/icon/79894/unesco">icons by Icons8</a>
+			</div>
+			<div class="col-sm  social">
+				<a target="_blank" rel="noopener" href="https://www.instagram.com/unescoworldheritage/">
+					<img src="https://img.icons8.com/cute-clipart/64/000000/instagram-new.png"/>
+					<span class="sr-only">Instagram</span>
+				</a>
+				<a target="_blank" rel="noopener" href="https://www.tripadvisor.co.uk/">
+					<img src="https://img.icons8.com/color/48/000000/tripadvisor.png"/>
+					<span class="sr-only">Tripadvisor</span>
+				</a>
+				<a target="_blank" rel="noopener" href="http://whc.unesco.org/">
+					<img src="https://img.icons8.com/nolan/64/unesco.png"/>
+					<span class="sr-only">UNESCO</span>
+				</a>
+				<a target="_blank" rel="noopener" href="https://www.google.com">
+					<img src="https://img.icons8.com/cute-clipart/64/000000/google-logo.png"/>
+					<span class="sr-only">Google</span>
+				</a>
+			</div>
+			<div class="col-sm copyright">
+				<p>© Kitti Kovacs 2020</p>
+			</div>
+		</div>
+	</footer>
+	<script src="assets/js/script.js" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+	</script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
-		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
+	</script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
-		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
+	</script>
 </body>
+
 </html>
