--- a/index.html
+++ b/index.html
@@ -47,7 +47,10 @@
       src="assets/images/World_Heritage_Logo_global.svg.png">
     </div
   </div>
-
+</section>
+<section class="container-fluid">
+  <div id="map">
+  </div>
 </section>
 
 </main>
@@ -79,6 +82,7 @@
 			</div>
 		</div>
 	</footer>
+
 	<script src="assets/js/script.js" crossorigin="anonymous"></script>
 	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
 		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
@@ -89,6 +93,9 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
 		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
 	</script>
+    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBSYJ2guMpg1PY9L3f3Oa94Ox-Ez4A9nEc&callback=initMap"></script>
+    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBSYJ2guMpg1PY9L3f3Oa94Ox-Ez4A9nEc&libraries=places"></script>
+
 </body>
 
 </html>
