--- a/list.html
+++ b/list.html
@@ -31,6 +31,11 @@
 				href="index.html">WonderList<img src="https://img.icons8.com/dusk/64/000000/world-map.png"/ alt="WonderList"></a>
 		</nav>
 	</header>
+    <main>
+  <section >
+     <div id="data">
+     </div>
+  </section>
 	<footer class="container-fluid">
 		<div class="row no-gutters align-items-center">
 			<div class="col-sm">
