add extra search button and syndication info

--- a/index.html
+++ b/index.html
@@ -98,6 +98,9 @@
       </label>
     </div>
   </div>
+  <div class="row no-gutters"id="button-container">
+      <button type="button" class="btn btn-primary">Search</button>
+  </div>
   <div class="row no-gutters search-criteria">
     <div class="col-sm">
       <h4>Or search by site:</h4>
@@ -118,6 +121,14 @@
 </section>
 <section class="container-fluid">
   <div id="map">
+  </div>
+</section>
+<section id="syndication" class="container-fluid">
+  <div id="">
+    <p>
+      Copyright © 1992 - 2020 UNESCO/World Heritage Centre. All rights reserved.<br>
+      Please Visit the UNESCO/WHC <a target="_blank" href="https://whc.unesco.org">home page.</a>for more useful information!
+    </p>
   </div>
 </section>
 
