--- a/list.html
+++ b/list.html
@@ -36,6 +36,14 @@
      <div id="data">
      </div>
   </section>
+  <section id="syndication" class="container-fluid">
+  <div id="">
+    <p>
+      Copyright © 1992 - 2020 UNESCO/World Heritage Centre. All rights reserved.<br>
+      Please Visit the UNESCO/WHC <a target="_blank" href="https://whc.unesco.org">home page.</a>for more useful information!
+    </p>
+  </div>
+  </section> 
 	<footer class="container-fluid">
 		<div class="row no-gutters align-items-center">
 			<div class="col-sm">
