change intro image and text, fix navbar alignment

--- a/index.html
+++ b/index.html
@@ -36,15 +36,13 @@
 <section class="container-fluid" >
   <div class="row no-gutters"  id="intro">
     <div class="col image-container">
-      <img id="intro-image" src="assets/images/globe2.jpg">
+      <img id="intro-image" src="assets/images/travel is good.jpg">
     </div>
     <div class="col text-container">
       <h1 id="intro-text-title">World Heritage Sites – treasures that belong to all humanity</h1>
-      <p>In 1972, UNESCO (The United Nations Educational, Scientific and Cultural Organization) adopted an international treaty called the Convention concerning the Protection of the World Cultural and Natural Heritage. Its aim is the protection and preservation of the cultural and natural heritage around the world considered to be of outstanding value to humanity. The countries that have signed the World Heritage Convention are pledging to protect their natural and cultural heritage.</p> 
+      <p>In 1972, UNESCO (The United Nations Educational, Scientific and Cultural Organization) adopted an international treaty called the Convention concerning the Protection of the World Cultural and Natural Heritage. Its aim is the protection and preservation of the cultural and natural heritage around the world considered to be of outstanding value to humanity.</p> 
       <p>Today, there are 1121 World Heritage Sites worldwide. To be included on the World Heritage List, sites must be of outstanding universal value and meet at least one out of ten selection criteria.</p>
       <p>To learn more about the locations and start planning your visit, search the map below!</p>
-      <img id="unesco-image" 
-      src="assets/images/World_Heritage_Logo_global.svg.png">
     </div
   </div>
 </section>
