hide image on small viewports

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <main>
 <section class="container-fluid" >
   <div class="row no-gutters"  id="intro">
-    <div class="col image-container">
+    <div class="col-sm d-none d-lg-block image-container">
       <img id="intro-image" src="assets/images/travel is good.jpg">
     </div>
     <div class="col text-container">
