--- a/index.html
+++ b/index.html
@@ -55,27 +55,17 @@
   <div class="row no-gutters search-criteria">
     <div class="col">
       <h4>1. Pick a region:</h4>
-      <!--<input type="text" name="search" placeholder="Search..">-->
         <select class="mdb-select md-form" searchable="Search here..">
           <option value="" disabled selected>Choose a region...</option>
-          <option value="1">USA</option>
-          <option value="2">Germany</option>
-          <option value="3">France</option>
-          <option value="3">Poland</option>
-          <option value="3">Japan</option>
+          <option id="regions"></option>
         </select>
 <!--source:https://mdbootstrap.com/snippets/jquery/mdbootstrap/921549#html-tab-view-->
 
     </div>
-    <div class="col">
+    <div class="col" id="countries">
       <h4>2. Pick a country:</h4>
       <select class="mdb-select md-form" searchable="Search here..">
           <option value="" disabled selected>Choose a country...</option>
-          <option value="1">USA</option>
-          <option value="2">Germany</option>
-          <option value="3">France</option>
-          <option value="3">Poland</option>
-          <option value="3">Japan</option>
         </select>
       <!--<input type="text" name="search" placeholder="Search..">-->
     </div>
@@ -83,15 +73,15 @@
       <h4>3. Pick a category:</h4>
       <!----checkboxes from https://www.w3schools.com/howto/howto_css_custom_checkbox.asp---->
       <label class="container">Natural site
-        <input type="checkbox">
+        <input  id="natural"type="checkbox">
         <span class="checkmark"></span>
       </label>
-      <label class="container">Cultural site
-        <input type="checkbox">
+      <label class="container" >Cultural site
+        <input id="cultural" type="checkbox">
         <span class="checkmark"></span>
       </label>
       <label class="container">Mixed site
-        <input type="checkbox">
+        <input  id="mixed" type="checkbox">
         <span class="checkmark"></span>
       </label>
     </div>
