--- a/index.html
+++ b/index.html
@@ -32,95 +32,104 @@
 		</nav>
 	</header>
 
-    <main>
-<section class="container-fluid" >
-  <div class="row no-gutters"  id="intro">
-    <div class="col-sm d-none d-lg-block image-container">
-      <img id="intro-image" src="assets/images/travel is good.jpg">
-    </div>
-    <div class="col text-container">
-      <h1 id="intro-text-title">World Heritage Sites – treasures that belong to all humanity</h1>
-      <p>In 1972, UNESCO (The United Nations Educational, Scientific and Cultural Organization) adopted an international treaty called the Convention concerning the Protection of the World Cultural and Natural Heritage. Its aim is the protection and preservation of the cultural and natural heritage around the world considered to be of outstanding value to humanity.</p> 
-      <p>Today, there are 1121 World Heritage Sites worldwide. To be included on the World Heritage List, sites must be of outstanding universal value and meet at least one out of ten selection criteria.</p>
-      <p>To learn more about the locations and start planning your visit, search the map below!</p>
-    </div
-  </div>
-</section>
-<section class="container-fluid">
-  <div class="row no-gutters">
-    <div class="col"  id="search">
-      <h2>Plan your visit</h2>
-    </div>
-  </div>
-  <div class="row no-gutters search-criteria">
-    <div class="col">
-      <h4>1. Pick a region:</h4>
-        <select class="mdb-select md-form" searchable="Search here..">
-          <option value="" disabled selected>Choose a region...</option>
-          <option id="regions"></option>
-        </select>
-<!--source:https://mdbootstrap.com/snippets/jquery/mdbootstrap/921549#html-tab-view-->
+	<main>
+		<section class="container-fluid">
+			<div class="row no-gutters" id="intro">
+				<div class="col-sm d-none d-lg-block image-container">
+					<img id="intro-image" src="assets/images/travel is good.jpg">
+                </div>
+				<div class="col text-container">
+				    <h1 id="intro-text-title">World Heritage Sites – treasures that belong to all humanity</h1>
+					<p>In 1972, UNESCO (The United Nations Educational, Scientific and Cultural Organization)
+							adopted an international treaty called the Convention concerning the Protection of the World
+							Cultural and Natural Heritage. Its aim is the protection and preservation of the cultural
+							and natural heritage around the world considered to be of outstanding value to humanity.
+                    </p>
+					<p>Today, there are 1121 World Heritage Sites worldwide. To be included on the World Heritage
+							List, sites must be of outstanding universal value and meet at least one out of ten
+							selection criteria.
+                    </p>
+					<p>To learn more about the locations and start planning your visit, search the map below!
+                    </p>
+				</div 
+            </div> 
+        </section> 
 
-    </div>
-    <div class="col" id="countries">
-      <h4>2. Pick a country:</h4>
-      <select class="mdb-select md-form" searchable="Search here..">
-          <option value="" disabled selected>Choose a country...</option>
-        </select>
-      <!--<input type="text" name="search" placeholder="Search..">-->
-    </div>
-    <div class="col-sm">
-      <h4>3. Pick a category:</h4>
-      <!----checkboxes from https://www.w3schools.com/howto/howto_css_custom_checkbox.asp---->
-      <label class="container">Natural site
-        <input  id="natural"type="checkbox">
-        <span class="checkmark"></span>
-      </label>
-      <label class="container" >Cultural site
-        <input id="cultural" type="checkbox">
-        <span class="checkmark"></span>
-      </label>
-      <label class="container">Mixed site
-        <input  id="mixed" type="checkbox">
-        <span class="checkmark"></span>
-      </label>
-    </div>
-  </div>
-  <div class="row no-gutters"id="button-container">
-      <button type="button" class="btn btn-primary">Search</button>
-  </div>
-  <div class="row no-gutters search-criteria">
-    <div class="col-sm">
-      <h4>Or search by site:</h4>
-      <!--<input type="text" name="search" placeholder="Search.." class="field">-->
-      <select class="mdb-select md-form" searchable="Search here..">
-          <option value="" disabled selected>Choose a site...</option>
-          <option value="1">USA</option>
-          <option value="2">Germany</option>
-          <option value="3">France</option>
-          <option value="3">Poland</option>
-          <option value="3">Japan</option>
-        </select>
-    </div>
-  </div>
-    <div class="row no-gutters"id="button-container">
-      <button type="button" class="btn btn-primary">Search</button>
-    </div>
-</section>
-<section class="container-fluid">
-  <div id="map">
-  </div>
-</section>
-<section id="syndication" class="container-fluid">
-  <div id="">
-    <p>
-      Copyright © 1992 - 2020 UNESCO/World Heritage Centre. All rights reserved.<br>
+        <!--Options to search map-->
+
+        <section class="container-fluid">
+			<div class="row no-gutters">
+				<div class="col" id="search">
+					<h2>Plan your visit</h2>
+				</div>
+			</div>
+			<div class="row no-gutters search-criteria">
+				<div class="col">
+					<h4>Select by criteria:</h4>
+				</div>
+			</div>
+			<div class="row no-gutters search-criteria">
+				<div class="col">
+					<h4>1. Pick a region:</h4>
+			        <select class="mdb-select md-form" searchable="Search here..">
+                        <option value="" disabled selected>Choose a region...</option>
+                        <option id="regions">Africa</option>
+                        <option id="regions">Arab States</option>
+                        <option id="regions">Asia and the Pacific</option>
+                        <option id="regions">Europe and North America</option>
+                        <option id="regions">Europe and North America,Asia and the Pacific,Latin America and the Caribbean</option>
+                        <option id="regions">Europe and North America,Asia and the Pacific</option>
+                        <option id="regions">Latin America and the Caribbean</option>
+                    </select>
+				</div>
+
+	<!--source:https://mdbootstrap.com/snippets/jquery/mdbootstrap/921549#html-tab-view-->
+
+		        <div class="col-sm">
+		            <h4>2. Pick a category:</h4>
+
+			        <label class="container">Natural site
+                        <input  id="natural" type="checkbox">
+                        <span class="checkmark"></span>
+                     </label>
+	                <label class="container" >Cultural site
+                        <input id="cultural" type="checkbox">
+                        <span class="checkmark"></span>
+                    </label>
+	                <label class="container">Mixed site
+                        <input  id="mixed" type="checkbox">
+                        <span class="checkmark"></span>
+                    </label>
+		        </div>
+                <!----checkboxes from https://www.w3schools.com/howto/howto_css_custom_checkbox.asp---->
+                
+			</div>
+			<div class="row no-gutters" id="button-container">
+				<button type="button" class="btn btn-primary">Show on map</button>
+			</div>
+			<div class="row no-gutters search-criteria">
+				<div class="col-sm">
+					<h4>Or search by site:</h4>
+					<input type="text" name="search" placeholder="Search.." class="field">
+                </div>
+		    </div>
+		   <div class="row no-gutters" id="button-container">
+				<button type="button" class="btn btn-primary">Search</button>
+			</div>
+		</section>
+		<section class="container-fluid">
+			<div id="map">
+			</div>
+		</section>
+		<section id="syndication" class="container-fluid">
+			<div id="">
+				<p>
+					Copyright © 1992 - 2020 UNESCO/World Heritage Centre. All rights reserved.<br>
       Please Visit the UNESCO/WHC <a target="_blank" href="https://whc.unesco.org">home page.</a>for more useful information!
-    </p>
-  </div>
-</section>
-
-</main>
+				</p>
+			</div>
+		</section>
+	</main>
 	<footer class="container-fluid">
 		<div class="row no-gutters align-items-center">
 			<div class="col-sm">
@@ -150,7 +159,8 @@
 		</div>
 	</footer>
 
-	<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+	<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	</script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
 		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
@@ -158,14 +168,16 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
 		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
 	</script>
-    <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBSYJ2guMpg1PY9L3f3Oa94Ox-Ez4A9nEc&callback=initMap"></script>
-    <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBSYJ2guMpg1PY9L3f3Oa94Ox-Ez4A9nEc&libraries=places"></script>
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.12.0/lodash.min.js"></script>
-    <script src="https://unpkg.com/lowdb@0.17.1/dist/low.min.js"></script>
-    <script src="https://unpkg.com/lowdb@0.17.1/dist/LocalStorage.min.js"></script>
-
-    <script src="assets/js/script.js" crossorigin="anonymous"></script>
+	<script async defer
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBSYJ2guMpg1PY9L3f3Oa94Ox-Ez4A9nEc&callback=initMap">
+	</script>
+	<script type="text/javascript"
+		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBSYJ2guMpg1PY9L3f3Oa94Ox-Ez4A9nEc&libraries=places">
+	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.12.0/lodash.min.js"></script>
+	<script src="https://unpkg.com/lowdb@0.17.1/dist/low.min.js"></script>
+	<script src="https://unpkg.com/lowdb@0.17.1/dist/LocalStorage.min.js"></script>
+	<script src="assets/js/script.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
