working on problems with array

--- a/index.html
+++ b/index.html
@@ -108,9 +108,13 @@
 				<button type="button" class="btn btn-primary">Show on map</button>
 			</div>
 			<div class="row no-gutters search-criteria">
-				<div class="col-sm">
+				<div class="col-sm ">
 					<h4>Or search by site:</h4>
 					<input type="text" name="search" placeholder="Search.." class="field">
+                    <ul>
+                    <li id="sites">
+                    </li>
+                    </ul>
                 </div>
 		    </div>
 		   <div class="row no-gutters" id="button-container">
