--- a/index.html
+++ b/index.html
@@ -110,11 +110,7 @@
 			<div class="row no-gutters search-criteria">
 				<div class="col-sm ">
 					<h4>Or search by site:</h4>
-					<input type="text" name="search" placeholder="Search.." class="field">
-                    <ul>
-                    <li id="sites">
-                    </li>
-                    </ul>
+					<input type="text" name="search" placeholder="Search.." class="field" id="sites">
                 </div>
 		    </div>
 		   <div class="row no-gutters" id="button-container">
