added table to list page

--- a/list.html
+++ b/list.html
@@ -31,10 +31,34 @@
 				href="index.html">WonderList<img src="https://img.icons8.com/dusk/64/000000/world-map.png"/ alt="WonderList"></a>
 		</nav>
 	</header>
-    <main>
-  <section >
-     <div id="data">
-     </div>
+  
+  <main>
+  <section id="data">
+  <div class= "row no-gutters">
+    <div class="col-sm">
+    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for sites..">
+    </div>
+  </div>
+  <div class= "row no-gutters">
+    <div class="col-sm">
+      <table id="myTable">
+        <tr class="header">
+          <th>Name</th>
+          <th>Region</th>
+          <th>Countries</th>
+          <th>Year added</th>
+          <th>Category</th>
+        </tr>
+        <tr>
+          <td>Alfreds Futterkiste</td>
+          <td>Germany</td>
+          <td>Germany</td>
+          <td>Germany</td>
+          <td>Germany</td>
+        </tr>
+      </table>
+    </div>
+  </div>
   </section>
   <section id="syndication" class="container-fluid">
   <div id="">
