addig data to dropdown

--- a/index.html
+++ b/index.html
@@ -73,13 +73,13 @@
 					<h4>1. Pick a region:</h4>
 			        <select class="mdb-select md-form" searchable="Search here..">
                         <option value="" disabled selected>Choose a region...</option>
-                        <option id="regions">Africa</option>
-                        <option id="regions">Arab States</option>
-                        <option id="regions">Asia and the Pacific</option>
-                        <option id="regions">Europe and North America</option>
-                        <option id="regions">Europe and North America,Asia and the Pacific,Latin America and the Caribbean</option>
-                        <option id="regions">Europe and North America,Asia and the Pacific</option>
-                        <option id="regions">Latin America and the Caribbean</option>
+                        <option id="1_Africa">Africa</option>
+                        <option id="2_Arab">Arab States</option>
+                        <option id="3_Asia-Pacific">Asia and the Pacific</option>
+                        <option id="4_Eu-America">Europe and North America</option>
+                        <option id="5_World">Europe and North America,Asia and the Pacific,Latin America and the Caribbean</option>
+                        <option id="6_Eu-America-Asia-Pacific">Europe and North America,Asia and the Pacific</option>
+                        <option id="7_Latin-Caribbean">Latin America and the Caribbean</option>
                     </select>
 				</div>
 
