--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+                <span class="navbar-toggler-icon"></span>
+            </button>
 			<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
 				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 					<li class="nav-item active">
@@ -55,7 +55,7 @@
             </div> 
         </section> 
 
-        <!--Options to search map-->
+        <!---Options to search map--->
 
         <section class="container-fluid">
 			<div class="row no-gutters">
@@ -68,67 +68,55 @@
 					<h4>Select by criteria:</h4>
 				</div>
 			</div>
+
+            <!---source:https://mdbootstrap.com/snippets/jquery/mdbootstrap/921549#html-tab-view-->
+
 			<div class="row no-gutters search-criteria">
 				<div class="col">
 					<h4>1. Pick a region:</h4>
 			        <select class="mdb-select md-form" searchable="Search here..">
                         <option value="" disabled selected>Choose a region...</option>
-                        <option id="1_Africa">Africa</option>
-                        <option id="2_Arab">Arab States</option>
-                        <option id="3_Asia-Pacific">Asia and the Pacific</option>
-                        <option id="4_Eu-America">Europe and North America</option>
-                        <option id="5_World">Europe and North America,Asia and the Pacific,Latin America and the Caribbean</option>
-                        <option id="6_Eu-America-Asia-Pacific">Europe and North America,Asia and the Pacific</option>
-                        <option id="7_Latin-Caribbean">Latin America and the Caribbean</option>
+                        <option id="Africa-region" onclick="dropdownFunction()">Africa</option>
+                        <option id="Arab-region" onclick="dropdownFunction()">Arab States</option>
+                        <option id="Asia-Pacific-region" onclick="dropdownFunction()">Asia and the Pacific</option>
+                        <option id="Eu-America-region" onclick="dropdownFunction()">Europe and North America</option>
+                        <option id="World-region" onclick="dropdownFunction()">Europe and North America,Asia and the Pacific,Latin America and the Caribbean</option>
+                        <option id="Eu-America-Asia-Pacific-region" onclick="dropdownFunction()">Europe and North America,Asia and the Pacific</option>
+                        <option id="Latin-Caribbean-region" onclick="dropdownFunction()">Latin America and the Caribbean</option>
                     </select>
 				</div>
 
-	<!--source:https://mdbootstrap.com/snippets/jquery/mdbootstrap/921549#html-tab-view-->
+            <!---source: https://www.w3schools.com/jsref/prop_checkbox_checked.asp-->
 
 		        <div class="col-sm">
 		            <h4>2. Pick a category:</h4>
                     <form action="/action_page.php">
-                        <input type="checkbox" name="Natural_sites" id="natural" onclick="addCategoryToNatural()">Natural sites<br>
-                        <input type="checkbox" name="Cultural_sites" id="cultural" onclick="addCategoryToCultural()">Cultural sites<br>
-                        <input type="checkbox" name="Mixed_sites" id="mixed"onclick="addCategoryToMixed()">Mixed Sites<br>
+                        <input type="checkbox" name="Natural_sites" id="natural" onclick="checkboxFunction()">Natural sites<br>
+                        <input type="checkbox" name="Cultural_sites" id="cultural" onclick="checkboxFunction()">Cultural sites<br>
+                        <input type="checkbox" name="Mixed_sites" id="mixed"onclick="checkboxFunction()">Mixed Sites<br>
                     </form>
 		        </div>
-                <!---https://www.w3schools.com/jsref/prop_checkbox_checked.asp-->
-
-			        <!--<label class="container">Natural site
-                        <input  id="natural" type="checkbox">
-                        <span class="checkmark"></span>
-                     </label>
-	                <label class="container" >Cultural site
-                        <input id="cultural" type="checkbox">
-                        <span class="checkmark"></span>
-                    </label>
-	                <label class="container">Mixed site
-                        <input  id="mixed" type="checkbox">
-                        <span class="checkmark"></span>
-                    </label>
-		        </div>*/
-                <!----checkboxes from https://www.w3schools.com/howto/howto_css_custom_checkbox.asp---->
-
-                
 			</div>
 			<div class="row no-gutters" id="button-container">
-				<button type="button" class="btn btn-primary">Show on map</button>
+				<button type="button" class="btn btn-primary" id="search-button">Show on map</button>
 			</div>
 		</section>
+
 		<section class="container-fluid">
 			<div id="map">
 			</div>
 		</section>
+
 		<section id="syndication" class="container-fluid">
 			<div id="">
 				<p>
 					Copyright © 1992 - 2020 UNESCO/World Heritage Centre. All rights reserved.<br>
-      Please Visit the UNESCO/WHC <a target="_blank" href="https://whc.unesco.org">home page.</a>for more useful information!
+                    Please Visit the UNESCO/WHC <a target="_blank" href="https://whc.unesco.org">home page.</a>for more useful information!
 				</p>
 			</div>
 		</section>
 	</main>
+
 	<footer class="container-fluid">
 		<div class="row no-gutters align-items-center">
 			<div class="col-sm">
