--- a/list.html
+++ b/list.html
@@ -15,8 +15,8 @@
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+                    <span class="navbar-toggler-icon"></span>
+            </button>
 			<div class="collapse navbar-collapse" id="navbarTogglerDemo03">
 				<ul class="navbar-nav mr-auto mt-2 mt-lg-0">
 					<li class="nav-item">
@@ -33,33 +33,38 @@
 	</header>
   
   <main>
-  <section id="data">
-  <div class= "row no-gutters">
-    <div class="col-sm">
-    <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for sites..">
+<!----loader source: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_loader5---->
+
+  <section  id="data" onload="timeout()">
+    <div class= "row no-gutters">
+        <div class="col-sm">
+            <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for sites..">
+        </div>
     </div>
-  </div>
-  <div class= "row no-gutters">
-    <div class="col-sm">
-      <table id="myTable">
-        <tr class="header">
-          <th>Name</th>
-          <th>Region</th>
-          <th>Countries</th>
-          <th>Year added</th>
-          <th>Category</th>
-        </tr>
-        <tr>
-          <td>Alfreds Futterkiste</td>
-          <td>Germany</td>
-          <td>Germany</td>
-          <td>Germany</td>
-          <td>Germany</td>
-        </tr>
-      </table>
+    <div id="loader">
     </div>
-  </div>
+    <div class="row no-gutters">
+        <div class="col-sm">
+            <table id="myTable" class="animate-bottom" style="display:none;">
+                <tr class="header">
+                    <th>Name</th>
+                    <th>Region</th>
+                    <th>Countries</th>
+                    <th>Year added</th>
+                    <th>Category</th>
+                </tr>
+                <tr>
+                    <td>A</td>
+                    <td>Germany</td>
+                    <td>Germany</td>
+                    <td>Germany</td>
+                    <td>Germany</td>
+                </tr>
+            </table>
+        </div>
+    </div>
   </section>
+
   <section id="syndication" class="container-fluid">
   <div id="">
     <p>
@@ -68,7 +73,8 @@
     </p>
   </div>
   </section> 
-	<footer class="container-fluid">
+
+    <footer class="container-fluid">
 		<div class="row no-gutters align-items-center">
 			<div class="col-sm">
 				<a id="icons-ref" href="https://icons8.com/icon/79894/unesco">icons by Icons8</a>
@@ -96,9 +102,8 @@
 			</div>
 		</div>
 	</footer>
-	<script src="assets/js/script.js" crossorigin="anonymous"></script>
-	<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-		integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"
+		integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 	</script>
 	<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
 		integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous">
@@ -106,5 +111,10 @@
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"
 		integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous">
 	</script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.12.0/lodash.min.js"></script>
+	<script src="https://unpkg.com/lowdb@0.17.1/dist/low.min.js"></script>
+	<script src="https://unpkg.com/lowdb@0.17.1/dist/LocalStorage.min.js"></script>
+	<script src="assets/js/script.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
