marker groups created

--- a/index.html
+++ b/index.html
@@ -75,13 +75,11 @@
 				<div class="col">
 					<h4>1. Pick a region:</h4>
 			        <select class="mdb-select md-form" searchable="Search here.." id="regions">
-                        <option value="" disabled selected>Choose a region...</option>
+                        <option value="">Choose a region...</option>
                         <option id="Africa-region" onclick="dropdownFunction()">Africa</option>
                         <option id="Arab-region" onclick="dropdownFunction()">Arab States</option>
                         <option id="Asia-Pacific-region" onclick="dropdownFunction()">Asia and the Pacific</option>
                         <option id="Eu-America-region" onclick="dropdownFunction()">Europe and North America</option>
-                        <option id="World-region" onclick="dropdownFunction()">Europe and North America,Asia and the Pacific,Latin America and the Caribbean</option>
-                        <option id="Eu-America-Asia-Pacific-region" onclick="dropdownFunction()">Europe and North America,Asia and the Pacific</option>
                         <option id="Latin-Caribbean-region" onclick="dropdownFunction()">Latin America and the Caribbean</option>
                     </select>
 				</div>
