--- a/list.html
+++ b/list.html
@@ -33,19 +33,16 @@
 	</header>
   
   <main>
-<!----loader source: https://www.w3schools.com/howto/tryit.asp?filename=tryhow_css_loader5---->
 
-  <section  id="data" onload="timeout()">
+  <section  id="data">
     <div class= "row no-gutters">
         <div class="col-sm">
             <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for sites..">
         </div>
     </div>
-    <div id="loader">
-    </div>
     <div class="row no-gutters">
         <div class="col-sm">
-            <table id="myTable" class="animate-bottom" style="display:none;">
+            <table id="myTable">
                 <tr class="header">
                     <th>Name</th>
                     <th>Region</th>
