add dropdown to list page

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
 					<li class="nav-item active">
 						<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 					</li>
+                    <li class="nav-item">
+						<a class="nav-link" href="list.html">List of sites</a>
+					</li>
 				</ul>
 			</div>
 			<a class="navbar-brand"
@@ -46,7 +49,7 @@
 							List, sites must be of outstanding universal value and meet at least one out of ten
 							selection criteria.
                     </p>
-					<p>To learn more about the locations and start planning your visit, search the map below!
+					<p>Please Visit the <a target="_blank" href="https://whc.unesco.org">UNESCO/WHC home page</a> for more useful information!
                     </p>
 				</div> 
             </div> 
@@ -79,10 +82,7 @@
                     </form>
 		        </div>
 			</div>
-			<div class="row no-gutters" id="button-container">
-				<button type="button" class="btn btn-primary" id="search-button" onclick="search()">Show on map</button>
-			</div>
-		</section>
+        </section>
 
 		<section class="container-fluid">
 			<div id="map">
@@ -93,7 +93,6 @@
 			<div id="">
 				<p>
 					Copyright © 1992 - 2020 UNESCO/World Heritage Centre. All rights reserved.<br>
-                    Please Visit the UNESCO/WHC <a target="_blank" href="https://whc.unesco.org">home page.</a>for more useful information!
 				</p>
 			</div>
 		</section>
