adding radio buttons and moving map to own page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 						<a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
 					</li>
                     <li class="nav-item">
-						<a class="nav-link" href="list.html">List of sites</a>
+						<a class="nav-link" href="map.html">Map</a>
 					</li>
 				</ul>
 			</div>
@@ -54,41 +54,6 @@
 				</div> 
             </div> 
         </section> 
-
-        <!---Options to search map--->
-
-        <section class="container-fluid">
-			<div class="row no-gutters">
-				<div class="col" id="search">
-					<h2>Plan your visit</h2>
-				</div>
-			</div>
-			<div class="row no-gutters search-criteria">
-				<div class="col">
-					<h4>What kind of site are you looking for?</h4>
-				</div>
-			</div>
-
-            <!---source:https://mdbootstrap.com/snippets/jquery/mdbootstrap/921549#html-tab-view-->
-
-			<div class="row no-gutters search-criteria">
-            <!---source: https://www.w3schools.com/jsref/prop_checkbox_checked.asp-->
-
-		        <div class="col-sm">
-                    <form action="/action_page.php">
-                        <input type="checkbox" name="Natural_sites" id="natural" onclick="checkboxFunction()">Natural sites<br>
-                        <input type="checkbox" name="Cultural_sites" id="cultural" onclick="checkboxFunction()">Cultural sites<br>
-                        <input type="checkbox" name="Mixed_sites" id="mixed"onclick="checkboxFunction()">Mixed Sites (both of natural and cultural importance)<br>
-                    </form>
-		        </div>
-			</div>
-        </section>
-
-		<section class="container-fluid">
-			<div id="map">
-			</div>
-		</section>
-
 		<section id="syndication" class="container-fluid">
 			<div id="">
 				<p>
