adding further notes to markdown and work on radio buttons

--- a/map.html
+++ b/map.html
@@ -49,7 +49,7 @@
             <!---source: https://www.w3schools.com/tags/att_input_type_radio.asp>--->
 		        <div class="col-sm">
                     <form>
-                        <label><input type="radio" name="markerGroups" value="*" checked="checked"/> Show all</label><br>
+                        <label><input type="radio" name="markerGroups" value="*" /> Show all</label><br>
                         <label><input type="radio" id="natural" name="markerGroups" value="natural">Natural sites</label><br>
                         <label><input type="radio" id="cultural" name="markerGroups" value="cultural">Cultural sites</label><br>
                         <label><input type="radio" id="mixed" name="markerGroups" value="mixed">Mixed Sites (both of natural and cultural importance)</label><br>
