--- a/map.html
+++ b/map.html
@@ -49,8 +49,8 @@
             <!---source: https://www.w3schools.com/tags/att_input_type_radio.asp>--->
 		        <div class="col-sm">
                     <form>
-                        <label><input type="radio" name="markerGroups" value="*" /> Show all</label><br>
-                        <label><input type="radio" id="natural" name="markerGroups" value="natural">Natural sites</label><br>
+                        <label><input type="radio" id="all" name="markerGroups" value="*"/> Show all</label><br>
+                        <label><input type="radio" id="natural" name="markerGroups" value="natural" checked="checked">Natural sites</label><br>
                         <label><input type="radio" id="cultural" name="markerGroups" value="cultural">Cultural sites</label><br>
                         <label><input type="radio" id="mixed" name="markerGroups" value="mixed">Mixed Sites (both of natural and cultural importance)</label><br>
                     </form>
