--- a/map.html
+++ b/map.html
@@ -37,24 +37,31 @@
         <section class="container-fluid">
 			<div class="row no-gutters">
 				<div class="col" id="search">
-					<h2>Plan your visit</h2>
-				</div>
+					<h2>The List</h2>
+                    <h5>Each marker  below represents a World Heritage Site.<br>They are located in 178 countries across the World and categorized into <em>Natural, Cultural</em> and <em>Mixed</em> heritage sites. <br>In order to learn more about them, choose a category and click the button!
+                    </h5>
+                </div>
 			</div>
 			<div class="row no-gutters search-criteria">
 				<div class="col">
-					<h4>What kind of site are you looking for?</h4>
+					<h5>What kind of site are you looking for?</h5>
 				</div>
 			</div>
 			<div class="row no-gutters search-criteria">
             <!---source: https://www.w3schools.com/tags/att_input_type_radio.asp>--->
 		        <div class="col-sm">
                     <form>
-                        <label><input type="radio" id="all" name="markerGroups" value="*"/> Show all</label><br>
-                        <label><input type="radio" id="natural" name="markerGroups" value="natural" checked="checked">Natural sites</label><br>
+                        <label><input type="radio" id="natural" name="markerGroups" value="natural" >Natural sites</label><br>
                         <label><input type="radio" id="cultural" name="markerGroups" value="cultural">Cultural sites</label><br>
                         <label><input type="radio" id="mixed" name="markerGroups" value="mixed">Mixed Sites (both of natural and cultural importance)</label><br>
+                        <label><input type="radio" id="all" name="markerGroups" value="*"/> Show all</label><br>
                     </form>
 		        </div>
+            </div>
+            <div class="row no-gutters search-criteria">
+                <div class="col-sm">
+                    <button type="button" class="btn btn-primary" onclick="initMap()">Show on map</button>
+                </div>
 			</div>
         </section>
         <section class="container-fluid">
