adding more intro text

--- a/index.html
+++ b/index.html
@@ -45,11 +45,12 @@
 							Cultural and Natural Heritage. Its aim is the protection and preservation of the cultural
 							and natural heritage around the world considered to be of outstanding value to humanity.
                     </p>
-					<p>Today, there are 1121 World Heritage Sites worldwide. To be included on the World Heritage
-							List, sites must be of outstanding universal value and meet at least one out of ten
-							selection criteria.
+					<p>Today, there are <strong>1121</strong> World Heritage Sites worldwide-and this number increased every year! To be included on the World Heritage
+							List, sites must be of outstanding universal value and meet at least one out of ten selection criteria.
                     </p>
-					<p>Please Visit the <a target="_blank" href="https://whc.unesco.org">UNESCO/WHC home page</a> for more useful information!
+                    <p>If you are looking for a unique travel experience, or just want to know more about these places, start by searching my interactive <a href="map.html">map</a>!
+                    </p>
+					<p>You can also visit the <a target="_blank" href="https://whc.unesco.org">UNESCO World Heritage Center's home page</a> for more useful and fascinating information!
                     </p>
 				</div> 
             </div> 
