--- a/map.html
+++ b/map.html
@@ -125,7 +125,7 @@
     <script async defer
 		src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBSYJ2guMpg1PY9L3f3Oa94Ox-Ez4A9nEc">
 	</script>
-	<script src="assets/js/script.js" crossorigin="anonymous"></script>
+	<script type="module" src="assets/script.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
