corrected typo in html

--- a/map.html
+++ b/map.html
@@ -43,7 +43,7 @@
 				<div class="col" id="search">
 					<h2>The List</h2>
 					<h5>Each marker  below represents a World Heritage Site.<br>They are located in 178 countries across the World and categorized into
-						<em>Natural, Cultural</em> and <em>Mixed</em> heritage sites. <br>In order to learn more about them, choose a category and click the button!
+						<em>Natural, Cultural</em> and <em>Mixed</em> heritage sites. <br>In order to learn more about them, use the radio buttons below to filter the map by category, or just click on the markers!
                     </h5>
 				</div>
 			</div>
